crates/fixtures/tests/snapshots/hostile__font_chain_missing.snap
---
source: crates/fixtures/tests/hostile.rs
expression: snapshot.to_json()
---
{
  "revision": [
    [
      1,
      37
    ]
  ],
  "adapter": {
    "name": "harfrust",
    "version": "0.13.3",
    "platform_independent": true
  },
  "composer": "greedy",
  "medium": {
    "width": 430080,
    "height": 307200
  },
  "settings": {
    "max_pages": 1000,
    "paragraph_spacing": 8192,
    "annotation_spacing": 4096
  },
  "template": {
    "name": "default",
    "source": "builtin"
  },
  "pages": [
    {
      "width": 430080,
      "height": 307200
    }
  ],
  "frames": [
    {
      "name": "main",
      "role": {
        "flow": "main"
      },
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 36864,
        "ty": 36864
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 225280,
        "height": 233472
      }
    },
    {
      "name": "margin",
      "role": "margin",
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 280576,
        "ty": 36864
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 112640,
        "height": 233472
      }
    }
  ],
  "blocks": [
    {
      "node": "6@1",
      "kind": "paragraph",
      "style": {
        "family": "Absent",
        "families": [
          "Absent"
        ],
        "size": 11264,
        "line_height": 13517,
        "explain": {
          "family": "direct",
          "line-height": "default",
          "size": "style body"
        }
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 13
          },
          "preview": "Fallback 􏿿",
          "rect": {
            "origin": {
              "x": 0,
              "y": 0
            },
            "width": 225280,
            "height": 13517
          },
          "baseline": 10707,
          "width": 52107,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 9
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 0,
              "width": 44898
            },
            {
              "range": {
                "start": 9,
                "end": 13
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 44898,
              "width": 7209
            }
          ]
        }
      ]
    },
    {
      "node": "22@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "families": [
          "serif"
        ],
        "size": 11264,
        "line_height": 13517,
        "explain": {
          "family": "direct",
          "line-height": "default",
          "size": "style body"
        }
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 13
          },
          "preview": "Fallback 􏿿",
          "rect": {
            "origin": {
              "x": 0,
              "y": 21709
            },
            "width": 225280,
            "height": 13517
          },
          "baseline": 32416,
          "width": 52107,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 9
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 0,
              "width": 44898
            },
            {
              "range": {
                "start": 9,
                "end": 13
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 44898,
              "width": 7209
            }
          ]
        }
      ]
    }
  ],
  "relations": [],
  "diagnostics": [
    {
      "severity": "warning",
      "code": "font.fallback",
      "subject": {
        "kind": "node",
        "id": "6@1"
      },
      "message": "used \"serif\" from family chain",
      "bytes": {
        "start": 0,
        "end": 9
      }
    },
    {
      "severity": "warning",
      "code": "font.missing",
      "subject": {
        "kind": "node",
        "id": "6@1"
      },
      "message": "no face covers this grapheme; shaped with the generic default and .notdef",
      "bytes": {
        "start": 9,
        "end": 13
      }
    },
    {
      "severity": "warning",
      "code": "font.fallback",
      "subject": {
        "kind": "node",
        "id": "6@1"
      },
      "message": "used \"serif\" from family chain",
      "bytes": {
        "start": 9,
        "end": 13
      }
    },
    {
      "severity": "warning",
      "code": "font.missing",
      "subject": {
        "kind": "node",
        "id": "22@1"
      },
      "message": "no face covers this grapheme; shaped with the generic default and .notdef",
      "bytes": {
        "start": 9,
        "end": 13
      }
    }
  ]
}
