crates/fixtures/tests/snapshots/hostile__format_overlap_storm.snap
---
source: crates/fixtures/tests/hostile.rs
expression: snapshot.to_json()
---
{
  "revision": [
    [
      1,
      2462
    ]
  ],
  "adapter": {
    "name": "harfrust",
    "version": "0.13.3",
    "platform_independent": true
  },
  "composer": "greedy",
  "medium": {
    "width": 430080,
    "height": 307200
  },
  "settings": {
    "max_pages": 1000,
    "paragraph_spacing": 8192,
    "annotation_spacing": 4096
  },
  "template": {
    "name": "default",
    "source": "builtin"
  },
  "pages": [
    {
      "width": 430080,
      "height": 307200
    }
  ],
  "frames": [
    {
      "name": "main",
      "role": {
        "flow": "main"
      },
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 36864,
        "ty": 36864
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 225280,
        "height": 233472
      }
    },
    {
      "name": "margin",
      "role": "margin",
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 280576,
        "ty": 36864
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 112640,
        "height": 233472
      }
    }
  ],
  "blocks": [
    {
      "node": "6@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 11264,
        "line_height": 17203,
        "explain": {
          "family": "default",
          "line-height": "default",
          "size": "style body"
        }
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 23
          },
          "preview": "Hallway é́ שלום",
          "rect": {
            "origin": {
              "x": 0,
              "y": 0
            },
            "width": 225280,
            "height": 17203
          },
          "baseline": 13626,
          "width": 98704,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 2
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 0,
              "width": 14395
            },
            {
              "range": {
                "start": 2,
                "end": 13
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 14336,
              "level": 0,
              "x": 14395,
              "width": 44269
            },
            {
              "range": {
                "start": 13,
                "end": 14
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 14336,
              "level": 0,
              "x": 58664,
              "width": 3340
            },
            {
              "range": {
                "start": 14,
                "end": 22
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 14336,
              "level": 1,
              "x": 62004,
              "width": 36700
            },
            {
              "range": {
                "start": 22,
                "end": 23
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 14336,
              "level": 0,
              "x": 98704,
              "width": 3340
            }
          ]
        }
      ]
    },
    {
      "node": "6@1/2456@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 11264,
        "line_height": 30720,
        "explain": {
          "family": "default",
          "line-height": "default",
          "size": "style body"
        }
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 29
          },
          "preview": "grows 1234 👩‍👧 longer",
          "rect": {
            "origin": {
              "x": 0,
              "y": 25395
            },
            "width": 225280,
            "height": 30720
          },
          "baseline": 49728,
          "width": 139740,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 2
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 14336,
              "level": 0,
              "x": 0,
              "width": 13490
            },
            {
              "range": {
                "start": 2,
                "end": 3
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 14336,
              "level": 0,
              "x": 13490,
              "width": 7870
            },
            {
              "range": {
                "start": 3,
                "end": 10
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 14336,
              "level": 0,
              "x": 21360,
              "width": 49043
            },
            {
              "range": {
                "start": 10,
                "end": 11
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 14336,
              "level": 0,
              "x": 70403,
              "width": 3340
            },
            {
              "range": {
                "start": 11,
                "end": 22
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 14336,
              "level": 0,
              "x": 73743,
              "width": 18350
            },
            {
              "range": {
                "start": 22,
                "end": 23
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 14336,
              "level": 0,
              "x": 92093,
              "width": 3340
            },
            {
              "range": {
                "start": 23,
                "end": 24
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 14336,
              "level": 0,
              "x": 95433,
              "width": 4272
            },
            {
              "range": {
                "start": 24,
                "end": 25
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 14336,
              "level": 0,
              "x": 99705,
              "width": 7870
            },
            {
              "range": {
                "start": 25,
                "end": 27
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 14336,
              "level": 0,
              "x": 107575,
              "width": 16114
            },
            {
              "range": {
                "start": 27,
                "end": 28
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 123689,
              "width": 5222
            },
            {
              "range": {
                "start": 28,
                "end": 29
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 25600,
              "level": 0,
              "x": 128911,
              "width": 10829
            }
          ]
        }
      ]
    }
  ],
  "relations": [],
  "diagnostics": [
    {
      "severity": "warning",
      "code": "style.format-unreadable",
      "subject": {
        "kind": "node",
        "id": "6@1"
      },
      "message": "unreadable text formatting retained without application",
      "bytes": null
    },
    {
      "severity": "warning",
      "code": "style.format-unreadable",
      "subject": {
        "kind": "node",
        "id": "6@1/2456@1"
      },
      "message": "unreadable text formatting retained without application",
      "bytes": null
    }
  ]
}
